--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1> Rock Paper Scissors</h1>
+
+        <div class="btn-container">
+            <button class="rock">Rock</button>
+            <button class="paper">Paper</button>
+            <button class="scissors">Scissors</button>
+        </div>
+
+        <div class="new-container">
+            d
+            <p id="score"> Score is 0 - 0</p>
+        </div>
+        
+
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
