--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         </div>
 
         <div class="new-container">
-            d
-            <p id="score"> Score is 0 - 0</p>
+            <p id="score"></p>
         </div>
         
 
