score now updates on screen

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
             <button class="scissors">Scissors</button>
         </div>
 
-        <div class="new-container">
-            <p id="score"></p>
+        <p id="score">The score is 0 - 0</p>
+
+        <div class="result">
+            
         </div>
         
 
