game is now first to five wins

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h1> Rock Paper Scissors</h1>
+        <p class="info"> The game is first to five wins :)</p>
 
         <div class="btn-container">
             <button class="rock">Rock</button>
@@ -17,7 +18,7 @@
         </div>
 
         <p id="score">The score is 0 - 0</p>
-
+        
         <div class="result">
             
         </div>
